--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,7 +12,7 @@
         <div fxLayout="Row">
             <mat-card class="example-card">
 
-                <mat-card-title>Precio ema 50</mat-card-title>
+                <mat-card-title>EMA 50</mat-card-title>
                 <mat-card-content>
                     <p></p>
                     <p>{{ema50}}</p>
@@ -26,7 +26,7 @@
             <p></p>
             <mat-card class="example-card">
 
-                <mat-card-title>Precio ema 21</mat-card-title>
+                <mat-card-title>EMA 21</mat-card-title>
                 <mat-card-content>
                     <p></p>
                     <p>{{ema21}}</p>
@@ -41,7 +41,7 @@
             <p></p>
             <mat-card class="example-card">
 
-                <mat-card-title>Precio ema 8</mat-card-title>
+                <mat-card-title>EMA 8</mat-card-title>
                 <mat-card-content>
                     <p></p>
                     <p>{{ema8}}</p>
@@ -68,7 +68,7 @@
         </div>
         <mat-card class="example-card">
 
-            <mat-card-title>Entrada para ema21 y ema 8</mat-card-title>
+            <mat-card-title>Entrada Activa:</mat-card-title>
             <mat-card-content>
                 <p>{{entradaActiva}}</p>
 
