--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,6 +3,8 @@
 }
 
 .container {
-    align-items: center;
+    padding-top: 2%;
+    justify-content: center;
+    align-content: center;
     display: flex;
 }
