--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,3 +8,9 @@
     align-content: center;
     display: flex;
 }
+
+.loading {
+    justify-content: center;
+    align-content: center;
+    display: flex;
+}
