--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,7 +8,8 @@
 
 
 <div class="container">
-    <div class="flex-container" fxLayout="Column">
+    <mat-spinner class="loading" *ngIf="!precioBTCUSDT"></mat-spinner>
+    <div class="flex-container" fxLayout="Column" *ngIf="precioBTCUSDT">
         <div fxLayout="Row">
             <mat-card class="example-card">
 
